# test_project

./: pyproject.toml  requirements.txt
company/: admin.py  models.py  serializers.py  urls.py  views.py
company/migrations/: 0001_initial.py  0002_alter_cart_options_alter_orderitem_options_and_more.py  0002_initial.py  0003_alter_itemprice_item.py  0004_alter_itemprice_item.py  0005_alter_item_release_date.py  0006_alter_orderitem_order_item.py  0007_alter_cart_total.py  0008_rename_debt_company_balance.py  0009_remove_itemprice_item_remove_itemprice_owner_and_more.py
company/templates/: base.html  company_view.html  header.html  home.html
config/: settings.py  urls.py
finance/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
finance/migrations/: 0001_initial.py
retailer/: apps.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py
users/management/commands/: create_user.py
users/migrations/: 0001_initial.py  0002_remove_user_token_alter_user_is_active.py  0003_remove_payment_item_payment_cart.py  0004_delete_payment.py
